--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@ p{
     height: auto;
     max-width: 300px;
 }
+body{
+    background-image: url('background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-origin: border-box;
+}
+@media only screen and (max-width: 450px){
+    body{
+        background-image: url('background_mobile.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-origin: border-box;
+    }
+}
