--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,18 @@
     border-radius: 25%;
 }
 
+#tsparticles {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+}
+
+.tsparticles-canvas-el {
+    position: absolute !important;
+    z-index: -1 !important;
+}
+
 .welcomemessage {
     font-size: 3rem;
     text-align: center;
@@ -38,16 +50,13 @@ p {
 
 .welcomeText {
     text-align: center;
-    margin: 5rem 0 2rem 0;
 }
 
 .welcomeDiv {
+    height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    background: black;
-    color: white;
-    flex-direction: column;
 }
 
 .studentImage {
@@ -69,13 +78,13 @@ p {
     text-align: center;
 }
 
-@media screen and (max-width: 600px)  {
+@media screen and (max-width: 600px) {
     .responsiveText {
         font-size: 2rem;
     }
 }
 
-@media screen and (max-width: 350px)  {
+@media screen and (max-width: 350px) {
     .responsiveText {
         font-size: 1.5rem;
     }
@@ -87,19 +96,19 @@ p {
     text-align: center;
 }
 
-@media screen and (max-width: 600px)  {
+@media screen and (max-width: 600px) {
     .responsiveInsectText {
         font-size: 30px;
     }
 }
 
-@media screen and (max-width: 430px)  {
+@media screen and (max-width: 430px) {
     .responsiveInsectText {
         font-size: 25px;
     }
 }
 
-@media screen and (max-width: 360px)  {
+@media screen and (max-width: 360px) {
     .responsiveInsectText {
         font-size: 20px;
     }
@@ -107,8 +116,27 @@ p {
 
 .cardStyle {
     width: 18rem;
-    background: rgba(255,255,255,0.25);
+    background: rgba(255, 255, 255, 0.25);
 }
+
 .cardImage {
     height: 17rem;
+}
+
+.homePage {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+div {
+    color: white;
+}
+
+.bg-black1 {
+    background-color: #101010;
+}
+
+.bg-black2 {
+    background-color: #191919;
 }
